fix: move vercel.json to frontend directory and update config for monorepo

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,11 @@ build/
 coverage/
 .nyc_output/
 
-frontend/
-frontend/.git
+# Frontend build artifacts (but keep source files)
+frontend/dist/
+frontend/node_modules/
+frontend/.vite/
+frontend/.cache/
 
 # Firebase credentials (sensitive)
 *-firebase-adminsdk-*.json
