--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "npm run build"
+    "vercel-build": "VITE_BASE_PATH=/frontend/ bun run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
