Add booking payment flow, user agreement, caretaker notifications, and tagline integration

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,16 +1,15 @@
-﻿# Supabase Configuration (Required)
-# Get these from your Supabase project settings: https://app.supabase.com/project/_/settings/api
-VITE_SUPABASE_URL=https://your-project.supabase.co
+﻿# Supabase Configuration
+# Get these values from your Supabase project settings: https://app.supabase.com/project/_/settings/api
+
+# Required - Your Supabase project URL
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+
+# Required - Your Supabase anon/public key
 VITE_SUPABASE_PUBLISHABLE_KEY=your-anon-key-here
 
-# UPI Payment Configuration (Optional)
-# UPI ID for payments (e.g., your-phone@paytm)
+# Optional - For UPI payments
 VITE_UPI_ID=your-upi-id@paytm
+VITE_UPI_QR_CODE_URL=/upi-qr-code.png
 
-# UPI QR Code URL (Optional)
-# URL to your UPI QR code image, or place the image at /public/upi-qr-code.png
-VITE_UPI_QR_CODE_URL=
-
-# Base Path (Optional)
-# If deploying to a subdirectory, set this (e.g., "/farmbnb")
-# VITE_BASE_PATH=/
+# Optional - Base path if deploying to a subdirectory
+VITE_BASE_PATH=/
